cmake_minimum_required(VERSION 3.5)
project(gmod-module-base)

add_library(gmod-module-base INTERFACE)
target_include_directories(gmod-module-base INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
function(set_gmod_suffix_prefix target)
    set_target_properties(${target} PROPERTIES PREFIX "")

    if (WIN32)
        if (CMAKE_SIZEOF_VOID_P EQUAL 8)
            set_target_properties(${target} PROPERTIES SUFFIX "_win64.dll")
        else ()
            set_target_properties(${target} PROPERTIES SUFFIX "_win32.dll")
        endif ()
    else ()
        if (CMAKE_SIZEOF_VOID_P EQUAL 8)
            set_target_properties(${target} PROPERTIES SUFFIX "_linux64.dll")
        else ()
            set_target_properties(${target} PROPERTIES SUFFIX "_linux.dll")
        endif ()
    endif ()
endfunction()